# OccDemo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CadView.h  Dockerfile  OccDebuger.sln  README.md  TODO.md  datautils.cpp  main.cpp  openCascade_x64_release.props  threadpool.cpp  threadpool.h
.devcontainer/: devcontainer.json
.github/workflows/: ci_linux.yml  ci_linux.ymlbk  ci_mac.yml  ci_windows.yml  ci_windows.ymlbk  temp.md
Files/: darkmode.qss  daymode.qss  uiconfig.json
OccDebuger/: 2d_search.cpp  2d_search.h  BiSearch.cpp  BiSearch.h  BinSearchNode.cpp  BinSearchNode.h  BoundingBox.cpp  BoundingBox.h  CADView.cpp  CADView.h  DataGenerator.cpp  DataGenerator.h  DataObserver.cpp  DataObserver.h  Header.h  KAngleMultiLine.cpp  KAngleMultiLine.h  KBox.cpp  KBox.h  KContext.h  KDSearch.cpp  KDSearch.h  KLine.h  KLogger.cpp  KPnt.cpp  KPnt.h  KRegion.h  KViewBox.h  K_Pnt.cpp  K_Pnt.h  K_box.cpp  K_box.h  Ktimer.h  MainWindowOcc.cpp  MainWindowOcc.h  MainWindowOcc.ui  MultiUniset.cpp  MultiUniset.h  OCC7.6Release.props  OccDebuger.aps  (+49 more)
Python/: 中英文切换位置.py  处理kindle笔记.py  多文件读写列表.py  多文件读写字典.py  词频分析2.py  词频统计.py
Testing/: TAG
Testing/20240607-1037/: Test.xml
props/: opencascade_debug_7.7.props
src/: 2d_search.cpp  2d_search.h  BiSearch.cpp  BiSearch.h  BinSearchNode.cpp  BinSearchNode.h  BoundingBox.cpp  BoundingBox.h  CADView.cpp  CadView.cpp  CadView.h  CustomQlistWidget.cpp  CustomQlistWidget.h  DataGenerator.cpp  DataGenerator.h  DataObserver.cpp  DataObserver.h  KAngleMultiLine.cpp  KAngleMultiLine.h  KBox.cpp  KBox.h  KBoxObj.cpp  KBoxObj.h  KContext.cpp  KContext.h  KDSearch.cpp  KDSearch.h  KLine.cpp  KLine.h  KLogger.cpp  KLogger.h  KPnt.cpp  KPnt.h  KRegion.cpp  KRegion.h  KTimer.h  KViewBox.cpp  KViewBox.h  MainWindowOcc.cpp  MainWindowOcc.h  (+48 more)
